# libcangjie

./: .gitignore  .gitlab-ci.yml  Dockerfile  INSTALL.md  Makefile.am  README.md  configure.ac
cangjie/: cangjie-char.c  cangjie-char.h  cangjie-context.c  cangjie-context.h  cangjie-enums.c  cangjie-enums.h  cangjie-flags.c  cangjie-flags.h  cangjie.h
data/: README.table.md  cangjie.pc.in  table-cj3.txt  table-cj5.txt  table.txt
tests/: cangjie-char.c  db-integrity.c
tools/: dbbuilder.c
