# Point to our macro directory and pick up user flags from the environment
ACLOCAL_AMFLAGS  = -I m4 ${ACLOCAL_FLAGS}


# -- Library -------------------------
lib_LTLIBRARIES = libcangjie.la

libcangjie_la_LDFLAGS = -version-info $(CANGJIE_SO_VERSION)
libcangjie_la_SOURCES = \
	cangjie/cangjie-char.c \
	cangjie/cangjie-context.c \
	cangjie/cangjie-enums.c \
	$(NULL)
libcangjie_la_CFLAGS = \
	-DCANGJIE_COMPILATION \
	$(glib2_CFLAGS) \
	$(gom_CFLAGS) \
	$(NULL)
libcangjie_la_LIBADD = \
	$(glib2_LIBS) \
	$(gom_LIBS) \
	$(NULL)
libcangjie_la_include_HEADERS = \
	cangjie/cangjie.h \
	cangjie/cangjie-char.h \
	cangjie/cangjie-context.h \
	cangjie/cangjie-enums.h \
	$(NULL)
libcangjie_la_includedir = $(includedir)/cangjie


# -- Tools ---------------------------
bin_PROGRAMS = \
	bin/libcangjie_dbbuilder \
	$(NULL)

bin_libcangjie_dbbuilder_SOURCES = tools/dbbuilder.c
bin_libcangjie_dbbuilder_CFLAGS = $(glib2_CFLAGS) $(gio_CFLAGS) $(gom_CFLAGS)
bin_libcangjie_dbbuilder_LDADD = libcangjie.la $(glib2_LIBS) $(gio_LIBS) $(gom_LIBS)


# -- Data ----------------------------
data/cangjie.db: bin/libcangjie_dbbuilder data/table-cj3.txt data/table-cj5.txt
	$(AM_V_GEN) rm -f $@; \
	$(MKDIR_P) $(builddir)/data; \
	$(builddir)/bin/libcangjie_dbbuilder $@ $(srcdir)/data/table-cj3.txt $(srcdir)/data/table-cj5.txt >/dev/null

libcangjie_data_DATA = data/cangjie.db
libcangjie_datadir = $(pkgdatadir)

pkgconfig_DATA = data/cangjie.pc
pkgconfigdir = $(libdir)/pkgconfig


# -- Unit tests ----------------------
noinst_PROGRAMS = $(TEST_PROGS)
TEST_PROGS = \
	tests/cangjie-char \
	tests/db-integrity \
	$(NULL)

tests_cangjie_char_CFLAGS = $(glib2_CFLAGS) $(gom_CFLAGS)
tests_cangjie_char_LDADD = libcangjie.la $(glib2_LIBS) $(gom_LIBS)

tests_db_integrity_CFLAGS = $(glib2_CFLAGS) $(gom_CFLAGS) -DCANGJIE_DB_PATH='"$(abs_builddir)/data/cangjie.db"'
tests_db_integrity_LDADD = libcangjie.la $(glib2_LIBS) $(gom_LIBS)

check-local: $(TEST_PROGS)
	$(GTESTER) --verbose $(TEST_PROGS)


# -- Misc ----------------------------
AUTHORS:
	@if test -d "$(srcdir)/.git"; then \
	    echo Creating $@ && \
	    ( cd "$(top_srcdir)" && \
	      echo -e '# Generated by Makefile. Do not edit.\n#'; \
	      echo -e '# libcangjie was written by these people:\n'; \
	      git log --no-merges --pretty=format:"%an <%ae>" \
	          | sort | uniq; \
	      echo -e "\n# libcangjie would not have been possible without Wan Leung Wong's work on the"; \
	      echo -e '# original libcangjie: https://github.com/wanleung/libcangjie'; \
	    ) > $@.tmp && mv -f $@.tmp $@ \
	    || ( rm -f $@.tmp ; echo Failed to generate $@ >&2 ); \
	fi


# -- Common --------------------------
AM_CPPFLAGS = \
	-I$(top_srcdir)/cangjie \
	-Wall -Wextra -Wpedantic -Wdeclaration-after-statement -Werror=format-security \
	$(NULL)

CLEANFILES = \
	AUTHORS \
	data/cangjie.db \
	data/cangjie.pc \
	$(NULL)

EXTRA_DIST = \
	autogen.sh \
	data/README.table.md \
	data/table-cj3.txt \
	data/table-cj5.txt \
	INSTALL.md \
	README.md \
	$(NULL)

.PHONY: AUTHORS
